[gd_scene load_steps=33 format=3 uid="uid://dl4qj26axdkn5"]

[ext_resource type="Texture2D" uid="uid://dv3cc3h7aqs6i" path="res://assets/small_lighthouse1/icons.png" id="1_agnm1"]
[ext_resource type="Texture2D" uid="uid://bal66ltgni6to" path="res://assets/small_lighthouse1/body.png" id="2_d6i1x"]
[ext_resource type="Texture2D" uid="uid://df3mfi8jqmxtx" path="res://assets/small_lighthouse1/waves.png" id="3_o2xjn"]
[ext_resource type="Texture2D" uid="uid://cvg1wyiycrgv0" path="res://assets/small_lighthouse1/rays.png" id="4_s3qvl"]
[ext_resource type="Script" path="res://assets/Rays.gd" id="5_3kktq"]
[ext_resource type="Script" path="res://assets/Rays2.gd" id="5_36bue"]
[ext_resource type="Texture2D" uid="uid://d22j0ttpj87c1" path="res://assets/small_lighthouse2/waves.png" id="6_2s5ly"]
[ext_resource type="Texture2D" uid="uid://b70vu4x7xp1hx" path="res://assets/small_lighthouse2/body.png" id="7_fkdrj"]
[ext_resource type="Texture2D" uid="uid://dnqqc2m3oiwlm" path="res://assets/small_lighthouse2/icons.png" id="8_bfsbw"]
[ext_resource type="Texture2D" uid="uid://dmaq70jmed7oi" path="res://assets/small_lighthouse2/rays.png" id="9_rb88d"]
[ext_resource type="Script" path="res://assets/triangle.gd" id="11_170p1"]
[ext_resource type="Script" path="res://assets/dialog_box.gd" id="11_vyib2"]
[ext_resource type="Theme" uid="uid://coptn1eowx8x3" path="res://assets/theme_texte.tres" id="12_45yph"]
[ext_resource type="Texture2D" uid="uid://bjpy8u3sxruwp" path="res://assets/big_lighthouse/bottom1.png" id="15_lugbp"]
[ext_resource type="Texture2D" uid="uid://cn5jslg3b6fd5" path="res://assets/big_lighthouse/bottom2.png" id="16_vlxm8"]
[ext_resource type="Texture2D" uid="uid://dp6l7u8h4ydnv" path="res://assets/big_lighthouse/bottom3.png" id="17_j5ixb"]
[ext_resource type="Texture2D" uid="uid://bjahpp2r3boou" path="res://assets/big_lighthouse/bottom4.png" id="18_jqtu8"]
[ext_resource type="Texture2D" uid="uid://b8wqavga6uutm" path="res://assets/big_lighthouse/g13757.png" id="19_v8gd8"]
[ext_resource type="Texture2D" uid="uid://cdcvt6b6p1qao" path="res://assets/big_lighthouse/rays.png" id="20_eho32"]
[ext_resource type="Texture2D" uid="uid://b53f2spvqd2yk" path="res://assets/logos/eosc.png" id="21_qs2pi"]
[ext_resource type="Texture2D" uid="uid://b670tsa73qtq6" path="res://assets/logos/b2find.png" id="22_kijb1"]
[ext_resource type="Texture2D" uid="uid://8nu3qfyc4qvj" path="res://assets/logos/ivoa.png" id="23_wxfq7"]

[sub_resource type="Animation" id="Animation_dn5tw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.6, 0.6)]
}

[sub_resource type="Animation" id="Animation_0au2l"]
resource_name = "twinkle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.4, 0.4), Vector2(0.6, 0.6), Vector2(0.5, 0.5), Vector2(0.6, 0.6), Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mrkqn"]
_data = {
"RESET": SubResource("Animation_dn5tw"),
"twinkle": SubResource("Animation_0au2l")
}

[sub_resource type="Animation" id="Animation_xp8pn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1000, -35)]
}

[sub_resource type="Animation" id="Animation_5c7b6"]
resource_name = "bump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1000, -50), Vector2(-1000, -45), Vector2(-1000, -35), Vector2(-1000, -45), Vector2(-1000, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_clvy4"]
_data = {
"RESET": SubResource("Animation_xp8pn"),
"bump": SubResource("Animation_5c7b6")
}

[sub_resource type="Animation" id="Animation_3mdcy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.909, 1)]
}

[sub_resource type="Animation" id="Animation_xpmfe"]
resource_name = "twinkle"
length = 3.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_2ar43"]
resource_name = "twinkle2"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.4, 1.6, 3),
"transitions": PackedFloat32Array(1, 2, 0.784584, 1.27456, 0.535887),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(0.8, 0.8), Vector2(0.7, 0.7), Vector2(0.8, 0.8), Vector2(0.6, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0dt6"]
_data = {
"RESET": SubResource("Animation_3mdcy"),
"twinkle": SubResource("Animation_xpmfe"),
"twinkle2": SubResource("Animation_2ar43")
}

[node name="background" type="Node2D"]

[node name="small_lighthouse2" type="Node2D" parent="."]

[node name="Waves" type="Sprite2D" parent="small_lighthouse2"]
position = Vector2(1002, 331)
scale = Vector2(0.53617, 0.53617)
texture = ExtResource("6_2s5ly")

[node name="Body" type="Sprite2D" parent="small_lighthouse2"]
position = Vector2(1001.3, 369.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_fkdrj")

[node name="Icons" type="Sprite2D" parent="small_lighthouse2"]
position = Vector2(1002.87, 431.65)
scale = Vector2(0.489873, 0.489873)
texture = ExtResource("8_bfsbw")

[node name="Rays" type="Sprite2D" parent="small_lighthouse2"]
position = Vector2(1002.3, 330.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("9_rb88d")
script = ExtResource("5_3kktq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="small_lighthouse2/Rays"]
libraries = {
"": SubResource("AnimationLibrary_mrkqn")
}

[node name="dialog_box" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 608.0
offset_top = 510.0
offset_right = 1262.0
offset_bottom = 634.0

[node name="dialog_box" type="ColorRect" parent="dialog_box"]
layout_mode = 0
offset_right = 528.0
offset_bottom = 125.0
color = Color(0.917647, 1, 1, 1)
script = ExtResource("11_vyib2")

[node name="text" type="RichTextLabel" parent="dialog_box/dialog_box"]
layout_mode = 0
offset_left = 16.0
offset_top = 13.0
offset_right = 516.0
offset_bottom = 93.0
theme = ExtResource("12_45yph")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true

[node name="triangle" type="Polygon2D" parent="dialog_box"]
position = Vector2(-1000, -35)
color = Color(0.301961, 1, 1, 1)
polygon = PackedVector2Array(1475, 138, 1507, 138, 1491, 154)
script = ExtResource("11_170p1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialog_box/triangle"]
libraries = {
"": SubResource("AnimationLibrary_clvy4")
}

[node name="Timer" type="Timer" parent="dialog_box"]

[node name="step1" type="Node2D" parent="."]

[node name="Bottom1" type="Sprite2D" parent="step1"]
position = Vector2(160, 592)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_lugbp")

[node name="RichTextLabel" type="RichTextLabel" parent="step1/Bottom1"]
offset_left = 220.0
offset_top = -40.0
offset_right = 660.0
offset_bottom = 80.0
theme = ExtResource("12_45yph")
bbcode_enabled = true
text = "peer reviewed datasets"

[node name="G13757" type="Sprite2D" parent="step1"]
position = Vector2(456, 608)
scale = Vector2(0.4, 0.4)
texture = ExtResource("19_v8gd8")

[node name="step2" type="Node2D" parent="."]

[node name="Bottom2" type="Sprite2D" parent="step2"]
position = Vector2(165, 491)
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_vlxm8")

[node name="RichTextLabel" type="RichTextLabel" parent="step2/Bottom2"]
offset_left = 210.0
offset_top = -37.4999
offset_right = 660.0
offset_bottom = 122.5
theme = ExtResource("12_45yph")
text = "preparation (metadata & standards)"
metadata/_edit_use_anchors_ = true

[node name="step3" type="Node2D" parent="."]

[node name="Bottom3" type="Sprite2D" parent="step3"]
position = Vector2(170, 370)
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_j5ixb")

[node name="RichTextLabel" type="RichTextLabel" parent="step3/Bottom3"]
offset_left = 202.5
offset_top = -35.0
offset_right = 662.5
offset_bottom = 97.0
theme = ExtResource("12_45yph")
text = "submission"

[node name="step4" type="Node2D" parent="."]

[node name="Bottom4" type="Sprite2D" parent="step4"]
position = Vector2(176, 220)
scale = Vector2(0.5, 0.5)
texture = ExtResource("18_jqtu8")

[node name="RichTextLabel" type="RichTextLabel" parent="step4/Bottom4"]
offset_left = 193.0
offset_top = 45.0
offset_right = 548.0
offset_bottom = 172.0
theme = ExtResource("12_45yph")
text = "curation & verification"

[node name="step5" type="Node2D" parent="."]

[node name="Rays" type="Sprite2D" parent="step5"]
position = Vector2(729, 176)
scale = Vector2(0.5, 0.5)
texture = ExtResource("20_eho32")

[node name="RichTextLabel" type="RichTextLabel" parent="step5/Rays"]
offset_left = -610.0
offset_right = 90.0
offset_bottom = 92.0
rotation = 0.401426
theme = ExtResource("12_45yph")
text = "data is available to all"

[node name="logos" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="logos"]

[node name="Polygon2D" type="Polygon2D" parent="logos"]
position = Vector2(78, 28)
polygon = PackedVector2Array(736, 120, 1184, 176, 1168, 224, 728, 168)

[node name="Eosc" type="Sprite2D" parent="logos"]
position = Vector2(971, 172)
scale = Vector2(0.37358, 0.37358)
texture = ExtResource("21_qs2pi")

[node name="B2Find" type="Sprite2D" parent="logos"]
position = Vector2(699, 153)
scale = Vector2(0.366505, 0.366505)
texture = ExtResource("22_kijb1")

[node name="Ivoa" type="Sprite2D" parent="logos"]
position = Vector2(517, 131)
rotation = 0.0349066
scale = Vector2(0.35, 0.35)
texture = ExtResource("23_wxfq7")

[node name="small_lighthouse" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="small_lighthouse"]
position = Vector2(-16, 16)
polygon = PackedVector2Array(568, 248, 536, 296, 832, 432, 872, 376)

[node name="Icons" type="Sprite2D" parent="small_lighthouse"]
position = Vector2(690, 481.55)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_agnm1")

[node name="Body" type="Sprite2D" parent="small_lighthouse"]
position = Vector2(691, 402.55)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_d6i1x")

[node name="Waves" type="Sprite2D" parent="small_lighthouse"]
position = Vector2(690, 342)
rotation = -0.1309
scale = Vector2(1.04209, 1.02132)
texture = ExtResource("3_o2xjn")

[node name="Rays" type="Sprite2D" parent="small_lighthouse"]
position = Vector2(684, 341.55)
rotation = -0.0349066
scale = Vector2(0.909, 1)
texture = ExtResource("4_s3qvl")
script = ExtResource("5_36bue")

[node name="AnimationPlayer" type="AnimationPlayer" parent="small_lighthouse/Rays"]
libraries = {
"": SubResource("AnimationLibrary_j0dt6")
}
